--- a/ansible/inventory/dev_stack_dynamic_inventory_aws_ec2.yaml
+++ b/ansible/inventory/dev_stack_dynamic_inventory_aws_ec2.yaml
@@ -7,9 +7,9 @@ filters:
   instance-state-name: running
 keyed_groups:
   - key: tags['Project']
-    prefix: 'all_instances'
+    prefix: "all_instances"
   - key: tags['Role']
-    prefix: 'role'
+    prefix: "role"
 hostnames:
   - "ip-address"
 compose:
